Signup page edited

--- a/Admin_Frontend/html/signup/signup.html
+++ b/Admin_Frontend/html/signup/signup.html
@@ -13,9 +13,9 @@
 <body>
 
     <div class="topnav" id="myTopnav">
-        <div id="navLogo"><a href="#home" class="active"><img src="/Admin_Frontend/Images/logo.png" alt=""></a></div>
+        <div id="navLogo"><a href="/Admin_Frontend/index.html" class="active"><img src="/Admin_Frontend/Images/logo.png" alt=""></a></div>
         <div>
-            <a href="#news">Home</a>
+            <a href="/Admin_Frontend/index.html">Home</a>
             <a href="#contact">Contact</a>
             <a href="#about">Login</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -39,12 +39,10 @@
             <input type="tel" id="mobile" name="adminMobile" placeholder="Enter your mobile number">
 
             <label for="">Email</label>
-
-            <input type="email" id="mail" name="adminMail" placeholder="Enter email">
+            <input type="email" id="email" name="adminEmail" placeholder="Enter email">
 
             <label for="">Enter password</label>
-
-            <input type="password" name="" id="pwd" name="adminPwd" placeholder="Enter password">
+            <input type="password" id="password" name="adminPassword" placeholder="Enter password">
 
             <p>By signining up , I accept the Venture Trip <a href="">Terms of Services</a> and acknowledge the <a
                     href="">Privacy Policy</a> </p>
