--- a/Admin_Frontend/index.html
+++ b/Admin_Frontend/index.html
@@ -717,7 +717,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="Images/logo.svg" alt="Tourly logo">
+            <img src="/Admin_Frontend/Images/logo.png" alt="Tourly logo">
           </a>
 
           <p class="footer-text">
@@ -741,19 +741,19 @@
             <li class="contact-item">
               <ion-icon name="call-outline"></ion-icon>
 
-              <a href="tel:+01123456790" class="contact-link">+01 (123) 4567 90</a>
+              <a href="tel:+917008268713" class="contact-link">+91 (700) 8268 713</a>
             </li>
 
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:info.tourly.com" class="contact-link">info.tourly.com</a>
+              <a href="mailto:info.tourly.com" class="contact-link">info.venturetrip.com</a>
             </li>
 
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address>3146 Koontz, California</address>
+              <address>Bhubaneswar, Odisha, India,752019</address>
             </li>
 
           </ul>
@@ -781,7 +781,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 <a href="">codewithsadee</a>. All rights reserved
+          &copy; 2022 <a href="">Venturetrip</a>. All rights reserved
         </p>
 
         <ul class="footer-bottom-list">
