--- a/Admin_Frontend/login_Index.html
+++ b/Admin_Frontend/login_Index.html
@@ -138,7 +138,7 @@
               <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
             </li>
             <li>
-                <a onclick="logoutFun()" id="logout" href="/Admin_Frontend/html/login/login.html" class="navbar-link" data-nav-link>Logout</a>
+                <a href="/Admin_Frontend/html/login/login.html" class="navbar-link" data-nav-link>Login</a>
               </li>
 
           </ul>
