--- a/Admin_Frontend/index.html
+++ b/Admin_Frontend/index.html
@@ -138,7 +138,7 @@
               <a href="#contact" class="navbar-link" data-nav-link>contact us</a>
             </li>
             <li>
-                <a onclick="logoutFun()" id="logout" href="/Admin_Frontend/html/login/login.html" class="navbar-link" data-nav-link>Logout</a>
+                <a href="/Admin_Frontend/html/login/login.html" class="navbar-link" data-nav-link>Login</a>
               </li>
 
           </ul>
@@ -831,7 +831,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="/Admin_Frontend/JavaScript/index.js"></script>
+  <!-- <script src="/Admin_Frontend/JavaScript/index.js"></script> -->
 
 </body>
 
